--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ endif()
 
 include_directories(lib/SFML/include)
 add_subdirectory(lib/SFML)
+set_target_properties(sfml-audio PROPERTIES CXX_STANDARD 98 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO)
 
 add_subdirectory(include/BLIB)
 add_subdirectory(src)
