Implement animation interfaces

--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -1,7 +1,10 @@
 target_sources(BLIB PUBLIC
     Files.hpp
+    Media.hpp
     Resources.hpp
     Util.hpp
 )
 
+add_subdirectory(Files)
+add_subdirectory(Media)
 add_subdirectory(Util)
