--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/gtest"]
 	path = lib/gtest
 	url = git@github.com:google/googletest.git
+[submodule "tools/AnimationEditor"]
+	path = tools/AnimationEditor
+	url = git@github.com:benreid24/Animation-Editor-2.git
