Add pausable timer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(Files)
 add_subdirectory(Media)
+add_subdirectory(Util)
