--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -1,10 +1,12 @@
 target_sources(BLIB PUBLIC
     Files.hpp
     Media.hpp
+    Parser.hpp
     Resources.hpp
     Util.hpp
 )
 
 add_subdirectory(Files)
 add_subdirectory(Media)
+add_subdirectory(Parser)
 add_subdirectory(Util)
