--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@ target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(Files)
 add_subdirectory(Media)
+add_subdirectory(Parser)
 add_subdirectory(Util)
