Organize unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,5 @@
 add_executable(BLIB.t
-    BinaryFile.t.cpp
-    FileUtil.t.cpp
-    JSON.t.cpp
     ResourceManager.t.cpp
-    Schema.t.cpp
 )
 
 target_link_libraries(BLIB.t PRIVATE
@@ -13,6 +9,7 @@ target_link_libraries(BLIB.t PRIVATE
     gtest_main
 )
 
+add_subdirectory(Files)
 
 target_include_directories(BLIB.t PRIVATE ${PROJECT_SOURCE_DIR}/lib/gtest/googletest/include)
 target_include_directories(BLIB.t PRIVATE ${PROJECT_SOURCE_DIR}/lib/gtest/googlemock/include)
