Start parser unit tests. Fix issue with improper ambiguous grammar detection

--- a/tests/Parser/CMakeLists.txt
+++ b/tests/Parser/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB.t PUBLIC
     Grammar.t.cpp
+    Parser.t.cpp
     Stream.t.cpp
     Tokenizer.t.cpp
     WhitespaceSkipper.t.cpp
