Implement most Script interfaces

--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -3,10 +3,12 @@ target_sources(BLIB PUBLIC
     Media.hpp
     Parser.hpp
     Resources.hpp
+    Scripts.hpp
     Util.hpp
 )
 
 add_subdirectory(Files)
 add_subdirectory(Media)
 add_subdirectory(Parser)
+add_subdirectory(Scripts)
 add_subdirectory(Util)
