--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(Files)
 add_subdirectory(Media)
 add_subdirectory(Parser)
+add_subdirectory(Scripts)
 add_subdirectory(Util)
