Unit test script Value

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(BLIB.t PRIVATE
 
 add_subdirectory(Files)
 add_subdirectory(Parser)
+add_subdirectory(Scripts)
 
 target_include_directories(BLIB.t PRIVATE ${PROJECT_SOURCE_DIR}/lib/gtest/googletest/include)
 target_include_directories(BLIB.t PRIVATE ${PROJECT_SOURCE_DIR}/lib/gtest/googlemock/include)
