--- a/src/Scripts/CMakeLists.txt
+++ b/src/Scripts/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
     Error.cpp
     Function.cpp
     Parser.hpp
+    Parser.cpp
     ScriptManager.cpp
     SymbolTable.cpp
     Value.cpp
