--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,8 +42,28 @@
             "dependsOn": [
                 "build"
             ]
+        },
+        {
+            "label": "filtered tests",
+            "type": "shell",
+            "command": "cd build/tests && ./BLIB.t --gtest_filter=${input:tfilter}",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "dependsOn": [
+                "build"
+            ]
         }
     ],
+    "inputs": [
+        {
+            "id": "tfilter",
+            "description": "Regex filter for tests to run:",
+            "default": "*",
+            "type": "promptString"
+        },
+    ]
     "problemMatcher": {
         "base": "$gcc",
         "fileLocation": [
