Add missing returns. Fix typo in animation. Start testing parse table generation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,7 +46,7 @@
         {
             "label": "filtered tests",
             "type": "shell",
-            "command": "cd build/tests && ./BLIB.t --gtest_filter=${input:tfilter}",
+            "command": "cd build/tests && ./BLIB.t --gtest_filter=${input:tfilter} -v",
             "group": {
                 "kind": "build",
                 "isDefault": true
