Some Script refactoring. Implement untested Value token resolution

--- a/src/Scripts/CMakeLists.txt
+++ b/src/Scripts/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(BLIB PRIVATE
     Parser.hpp
     Parser.cpp
     Script.cpp
+    ScriptImpl.hpp
+    ScriptImpl.cpp
     ScriptManager.cpp
     SymbolTable.cpp
     Value.cpp
