Implement and test Script and ScriptManager. cout->cerr. Remove extra output

--- a/tests/Scripts/CMakeLists.txt
+++ b/tests/Scripts/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB.t PUBLIC
     Error.t.cpp
     Parser.t.cpp
+    Script.t.cpp
     ScriptImpl.t.cpp
     SymbolTable.t.cpp
     Value.t.cpp
