Add unary negation. Test and fix built=in functions

--- a/tests/Scripts/CMakeLists.txt
+++ b/tests/Scripts/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB.t PUBLIC
     Parser.t.cpp
     Script.t.cpp
     ScriptImpl.t.cpp
+    ScriptLibrary.t.cpp
     SymbolTable.t.cpp
     Value.t.cpp
 )
