--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,4 @@
 [submodule "tools/AnimationEditor"]
 	path = tools/AnimationEditor
 	url = git@github.com:benreid24/Animation-Editor-2.git
+	ignore = dirty
