--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -1,4 +1,4 @@
-name: macos-build
+name: macos-verify
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  verify:
     runs-on: macOS-latest
 
     steps:
@@ -21,3 +20,7 @@ jobs:
       
     - name: make
       run: cd build && make
+    
+    - name: test
+      run: tests/BLIB.t 
+
