--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -1,4 +1,4 @@
-name: linux-build
+name: windows-verify
 
 on:
   push:
@@ -7,20 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  veriy:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: 'true'
-
-    - name: package-install
-      run: sudo apt-get install libx11-dev xorg-dev freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev
       
     - name: configure
       run: cmake -G "Unix Makefiles" -S . -B ./build
       
     - name: make
       run: cd build && make
+
+    - name: test
+      run: build/tests/BLIB.t 
