--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           submodules: true 
 
+      - name: Doxygen Install
+        run: sudo apt-get install doxygen
+      
       - name: Compile Docs
         run: doxygen Doxyfile
 
