Stub out GUI framework base class structure

--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     Files.hpp
+    GUI.hpp
     Media.hpp
     Parser.hpp
     Resources.hpp
@@ -8,6 +9,7 @@ target_sources(BLIB PUBLIC
 )
 
 add_subdirectory(Files)
+add_subdirectory(GUI)
 add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
