Begin gui example. Fix some issues with gui

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,7 +36,7 @@
             "type": "shell",
             "command": "cd build/tests && ./BLIB.t",
             "group": {
-                "kind": "build",
+                "kind": "test",
                 "isDefault": true
             },
             "dependsOn": [
@@ -48,7 +48,7 @@
             "type": "shell",
             "command": "cd build/tests && ./BLIB.t --gtest_filter=${input:tfilter} -v",
             "group": {
-                "kind": "build",
+                "kind": "test",
                 "isDefault": true
             },
             "dependsOn": [
