--- a/include/BLIB/GUI/Elements/CMakeLists.txt
+++ b/include/BLIB/GUI/Elements/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(BLIB PUBLIC
     Box.hpp
     Button.hpp
+    Canvas.hpp
     Container.hpp
     Element.hpp
+    Image.hpp
     Label.hpp
     ScrollArea.hpp
     Slider.hpp
