--- a/src/GUI/Elements/CMakeLists.txt
+++ b/src/GUI/Elements/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(BLIB PRIVATE
     Box.cpp
     Button.cpp
+    Canvas.cpp
     Container.cpp
     Element.cpp
+    Image.cpp
     Label.cpp
     ScrollArea.cpp
     Slider.cpp
