--- a/include/BLIB/GUI/Elements/CMakeLists.txt
+++ b/include/BLIB/GUI/Elements/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
     Element.hpp
     Image.hpp
     Label.hpp
+    ProgressBar.hpp
     ScrollArea.hpp
     Separator.hpp
     Slider.hpp
