Pull out utility methods from Renderer into new RendererUtil struct

--- a/include/BLIB/GUI/Renderers/CMakeLists.txt
+++ b/include/BLIB/GUI/Renderers/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(BLIB PUBLIC
     DebugRenderer.hpp
     DefaultRenderer.hpp
     Renderer.hpp
+    RendererUtil.hpp
     RenderSettings.hpp
 )
