--- a/src/GUI/Renderers/CMakeLists.txt
+++ b/src/GUI/Renderers/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(BLIB PRIVATE
     DebugRenderer.cpp
     DefaultRenderer.cpp
     Renderer.cpp
+    RendererUtil.cpp
     RenderSettings.cpp
 )
