--- a/src/GUI/Elements/CMakeLists.txt
+++ b/src/GUI/Elements/CMakeLists.txt
@@ -2,15 +2,18 @@ target_sources(BLIB PRIVATE
     Box.cpp
     Button.cpp
     Canvas.cpp
+    CheckButton.cpp
     Container.cpp
     Element.cpp
     Image.cpp
     Label.cpp
     Notebook.cpp
     ProgressBar.cpp
+    RadioButton.cpp
     ScrollArea.cpp
     Separator.cpp
     Slider.cpp
     TextEntry.cpp
+    ToggleButton.cpp
     Window.cpp
 )
