Start shapes module. Implement triangle and example

--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PUBLIC
     Parser.hpp
     Resources.hpp
     Scripts.hpp
+    Shapes.hpp
     Util.hpp
 )
 
@@ -13,4 +14,5 @@ add_subdirectory(GUI)
 add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
+add_subdirectory(Shapes)
 add_subdirectory(Util)
