--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(GUI)
 add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
+add_subdirectory(Shapes)
 add_subdirectory(Util)
