--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(Animation)
 add_subdirectory(Files)
 add_subdirectory(GUI)
+add_subdirectory(Logging)
 add_subdirectory(Resources)
 add_subdirectory(Shapes)
