--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(Files)
 add_subdirectory(GUI)
+add_subdirectory(Logging)
 add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
