--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Media)
+add_subdirectory(Menu)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
 add_subdirectory(Shapes)
