--- a/include/BLIB/Util/CMakeLists.txt
+++ b/include/BLIB/Util/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
     AngularVector.hpp
     NonCopyable.hpp
     Random.hpp
+    Signal.hpp
     Timer.hpp
     EventListener.hpp
     EventDispatcher.hpp
