Implement basic renderer and create directories

--- a/include/BLIB/Menu/CMakeLists.txt
+++ b/include/BLIB/Menu/CMakeLists.txt
@@ -5,3 +5,7 @@ target_sources(BLIB PUBLIC
     Renderer.hpp
     RenderItem.hpp
 )
+
+add_subdirectory(Renderers)
+add_subdirectory(RenderItems)
+add_subdirectory(Selectors)
