Implement Menu example and work out some bugs

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(Animation)
 add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
+add_subdirectory(Menu)
 add_subdirectory(Resources)
 add_subdirectory(Shapes)
