Create and test KeyboardEventGenerator. Mouse to follow

--- a/include/BLIB/Menu/CMakeLists.txt
+++ b/include/BLIB/Menu/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PUBLIC
     Selector.hpp
 )
 
+add_subdirectory(EventGenerators)
 add_subdirectory(Renderers)
 add_subdirectory(RenderItems)
 add_subdirectory(Selectors)
