--- a/src/Menu/CMakeLists.txt
+++ b/src/Menu/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PRIVATE
     Menu.cpp
 )
 
+add_subdirectory(EventGenerators)
 add_subdirectory(Renderers)
 add_subdirectory(RenderItems)
 add_subdirectory(Selectors)
