--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory(Engine)
 add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
