Add engine flags and engine settings. Implement main game loop

--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(BLIB PUBLIC
     Engine.hpp
     EngineEvent.hpp
+    EngineFlags.hpp
+    EngineSettings.hpp
     EngineState.hpp
 )
