--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -28,4 +28,7 @@ jobs:
       run: cd build && make
 
     - name: test
-      run: build/tests/BLIB.t 
+      run: 
+        X
+        export DISPLAY=:0 firefox
+        build/tests/BLIB.t 
