--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -19,19 +19,13 @@ jobs:
       run: sudo apt-get update
 
     - name: package-install
-      run: sudo apt-get install libx11-dev xorg-dev xorg openbox freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev
+      run: sudo apt-get install libx11-dev xorg-dev freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev
       
     - name: configure
       run: cmake -G "Unix Makefiles" -S . -B ./build
       
     - name: make
-      run: cd build && make
+      run: cd build && "Unix Makefiles"
 
-    - name: start X server
-      run: sudo X
-      
-    - name: configure X server
-      run: export DISPLAY=:0 firefox
-      
     - name: test
       run: build/tests/BLIB.t 
