--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -1,7 +1,7 @@
 target_sources(BLIB PUBLIC
     Engine.hpp
-    EngineEvent.hpp
-    EngineFlags.hpp
-    EngineSettings.hpp
-    EngineState.hpp
+    Event.hpp
+    Flags.hpp
+    Settings.hpp
+    State.hpp
 )
