Reorganize Util into Util and Containers. Implement Any class. Start working on ECS system

--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -1,4 +1,7 @@
 target_sources(BLIB PUBLIC
+    Containers.hpp
+    Engine.hpp
+    Entities.hpp
     Files.hpp
     GUI.hpp
     Logging.hpp
@@ -11,7 +14,9 @@ target_sources(BLIB PUBLIC
     Util.hpp
 )
 
+add_subdirectory(Containers)
 add_subdirectory(Engine)
+add_subdirectory(Entities)
 add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
