--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries(BLIB.t PRIVATE
     gtest_main
 )
 
+add_subdirectory(Containers)
 add_subdirectory(Engine)
 add_subdirectory(Files)
 add_subdirectory(Parser)
