--- a/src/Files/JSON/CMakeLists.txt
+++ b/src/Files/JSON/CMakeLists.txt
@@ -3,4 +3,7 @@ target_sources(BLIB PRIVATE
     JSONLoader.hpp
     JSONLoader.cpp
     Schema.cpp
+    Serializer.cpp
+    SerializableField.cpp
+    SerializableObject.cpp
 )
