--- a/examples/Files/CMakeLists.txt
+++ b/examples/Files/CMakeLists.txt
@@ -1,13 +1,2 @@
-add_executable(files
-    Data.cpp
-    main.cpp
-)
-
-target_link_libraries(files
-    BLIB 
-)
-
-set_target_properties(files
-    PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
-)
+add_subdirectory(Basic)
+add_subdirectory(JsonSerialize)
