Fix impl of versioned binary file and write tests

--- a/tests/Files/Binary/CMakeLists.txt
+++ b/tests/Files/Binary/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(BLIB.t PUBLIC
     BinaryFile.t.cpp
     SerializableField.t.cpp
     SerializableObject.t.cpp
+    VersionedBinaryFile.t.cpp
 )
