Implement multi type event dispatcher system and test

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -2,4 +2,7 @@ target_sources(BLIB PUBLIC
     EventDispatcher.hpp
     EventDispatcherScopeGuard.hpp
     EventListener.hpp
+    MultiEventDispatcher.hpp
+    MultiEventDispatcherScopeGuard.hpp
+    MultiEventListener.hpp
 )
