--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(Engine)
 add_subdirectory(Entities)
+add_subdirectory(Events)
 add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
