--- a/tests/Events/CMakeLists.txt
+++ b/tests/Events/CMakeLists.txt
@@ -1,3 +1,5 @@
 target_sources(BLIB.t PUBLIC
     EventDispatcher.t.cpp
+    MultiEventDispatcher.t.cpp
+    MultiEventDispatcherScopeGuard.t.cpp
 )
