--- a/tests/Events/CMakeLists.txt
+++ b/tests/Events/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB.t PUBLIC
+    DelayedEventDispatcher.t.cpp
     EventDispatcher.t.cpp
     MultiEventDispatcher.t.cpp
     MultiEventDispatcherScopeGuard.t.cpp
