Add move and copy semantics to binary serializable field. Implement interfaces for Playlist and AudioSystem. Add common resourc managers to engine singleton

--- a/examples/Animation/CMakeLists.txt
+++ b/examples/Animation/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(animation main.cpp)
 target_link_libraries(animation
     BLIB
     sfml-graphics
+    sfml-audio
     sfml-window
 )
 
