--- a/include/BLIB/Media/CMakeLists.txt
+++ b/include/BLIB/Media/CMakeLists.txt
@@ -1,2 +1,9 @@
+target_sources(BLIB PUBLIC
+    Audio.hpp
+    Graphics.hpp
+    Shapes.hpp
+)
+
+add_subdirectory(Audio)
 add_subdirectory(Graphics)
 add_subdirectory(Shapes)
