Place event classes into event namespace. Rename all classes, make multi event classes default. Replace event dispatcher in GUI, Engine, and Menu with the multi event version

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources(BLIB PUBLIC
-    DelayedEventDispatcher.hpp
-    EventDispatcher.hpp
-    EventDispatcherScopeGuard.hpp
-    EventListener.hpp
-    MultiEventDispatcher.hpp
-    MultiEventDispatcherScopeGuard.hpp
-    MultiEventListener.hpp
+    DelayedDispatcher.hpp
+    SingleDispatcher.hpp
+    SingleDispatcherScopeGuard.hpp
+    SingleListener.hpp
+    Dispatcher.hpp
+    DispatcherScopeGuard.hpp
+    Listener.hpp
 )
