--- a/tests/Events/CMakeLists.txt
+++ b/tests/Events/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(BLIB.t PUBLIC
-    DelayedEventDispatcher.t.cpp
-    EventDispatcher.t.cpp
-    MultiEventDispatcher.t.cpp
-    MultiEventDispatcherScopeGuard.t.cpp
+    DelayedDispatcher.t.cpp
+    SingleDispatcher.t.cpp
+    Dispatcher.t.cpp
+    DispatcherScopeGuard.t.cpp
 )
