--- a/src/Events/CMakeLists.txt
+++ b/src/Events/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_sources(BLIB PRIVATE
-    DelayedEventDispatcher.cpp
-    MultiEventDispatcher.cpp
-    MultiEventDispatcherScopeGuard.cpp
+    DelayedDispatcher.cpp
+    Dispatcher.cpp
+    DispatcherScopeGuard.cpp
 )
