Move Script and ScriptManager (rename Manager) into script namespace. Rename scripts namespace to script

--- a/include/BLIB/Scripts/CMakeLists.txt
+++ b/include/BLIB/Scripts/CMakeLists.txt
@@ -2,7 +2,7 @@ target_sources(BLIB PUBLIC
     Error.hpp
     Function.hpp
     Script.hpp
-    ScriptManager.hpp
+    Manager.hpp
     SymbolTable.hpp
     Value.hpp
 )
