Reorganize helper functions. Write doc comments

--- a/include/BLIB/Util/CMakeLists.txt
+++ b/include/BLIB/Util/CMakeLists.txt
@@ -1,5 +1,8 @@
 target_sources(BLIB PUBLIC
     AngularVector.hpp
+    Hashes.hpp
+    HashCombine.hpp
+    LastVariadic.hpp
     NonCopyable.hpp
     Random.hpp
     Signal.hpp
