Break out engine events into multiple classes

--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -1,9 +1,10 @@
 target_sources(BLIB PUBLIC
     Configuration.hpp
     Engine.hpp
-    Event.hpp
     Flags.hpp
     Resources.hpp
     Settings.hpp
     State.hpp
 )
+
+add_subdirectory(Events)
