Add classguard for events

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PUBLIC
+    ClassGuard.hpp
     DelayedDispatcher.hpp
     SingleDispatcher.hpp
     SingleDispatcherScopeGuard.hpp
