--- a/include/BLIB/CMakeLists.txt
+++ b/include/BLIB/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(Events)
 add_subdirectory(Files)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
+add_subdirectory(Math)
 add_subdirectory(Media)
 add_subdirectory(Menu)
 add_subdirectory(Parser)
