--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(Engine)
 add_subdirectory(Entities)
 add_subdirectory(Events)
 add_subdirectory(Files)
+add_subdirectory(Math)
 add_subdirectory(Parser)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
