Pull down GhostWriter, ViewUtil, and wordWrap from Peoplemon

--- a/include/BLIB/Interfaces/CMakeLists.txt
+++ b/include/BLIB/Interfaces/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(BLIB PUBLIC
     GUI.hpp
     Menu.hpp
+    Utilities.hpp
 )
 
 add_subdirectory(GUI)
 add_subdirectory(Menu)
+add_subdirectory(Utilities)
