Add tinyfiledialogs and begin implmenting FilePicker

--- a/include/BLIB/Interfaces/GUI/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PUBLIC
     Signal.hpp
 )
 
+add_subdirectory(Dialogs)
 add_subdirectory(Elements)
 add_subdirectory(Packers)
 add_subdirectory(Renderers)
