--- a/src/Interfaces/GUI/CMakeLists.txt
+++ b/src/Interfaces/GUI/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PRIVATE
 )
 
 add_subdirectory(Data)
+add_subdirectory(Dialogs)
 add_subdirectory(Elements)
 add_subdirectory(Packers)
 add_subdirectory(Renderers)
