--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,14 @@ else()
     add_library(BLIB SHARED)
 endif()
 
+if (MSVC)
+    # warning level 4 and all warnings as errors
+    target_compile_options(BLIB PUBLIC /W4 /WX)
+else()
+    # lots of warnings and all warnings as errors
+    target_compile_options(BLIB PUBLIC -Wall -Wextra -pedantic -Werror)
+endif()
+
 if (STATIC_LINK)
     set(BUILD_SHARED_LIBS Off)
     set(SFML_USE_STATIC_STD_LIBS On)
