--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ if (MSVC)
     target_compile_options(BLIB.t PUBLIC /W4 /WX)
 else()
     # lots of warnings and all warnings as errors
-    target_compile_options(BLIB.t PUBLIC -Wall -Wextra -pedantic -Werror)
+    target_compile_options(BLIB.t PUBLIC -Wall -Wextra -pedantic)
 endif()
 
 target_link_libraries(BLIB.t PRIVATE
