Implement SelectBox gui element

--- a/include/BLIB/Interfaces/GUI/Elements/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Elements/CMakeLists.txt
@@ -14,6 +14,7 @@ target_sources(BLIB PUBLIC
     RadioButton.hpp
     ProgressBar.hpp
     ScrollArea.hpp
+    SelectBox.hpp
     Separator.hpp
     Slider.hpp
     TextEntry.hpp
