Add buffer and stream interfaces and implementations to begin serialization refactor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,4 +10,5 @@ add_subdirectory(Math)
 add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Scripts)
+add_subdirectory(Serialization)
 add_subdirectory(Util)
