Add interfaces for serializable fields and objects

--- a/include/BLIB/Serialization/Binary/CMakeLists.txt
+++ b/include/BLIB/Serialization/Binary/CMakeLists.txt
@@ -3,4 +3,7 @@ target_sources(BLIB PUBLIC
     InputStream.hpp
     OutputFile.hpp
     OutputStream.hpp
+    SerializableField.hpp
+    SerializableObject.hpp
+    Serializer.hpp
 )
