Bring VersionedSerializer over to new Serialization module

--- a/include/BLIB/Serialization/Binary/CMakeLists.txt
+++ b/include/BLIB/Serialization/Binary/CMakeLists.txt
@@ -6,4 +6,5 @@ target_sources(BLIB PUBLIC
     SerializableField.hpp
     SerializableObject.hpp
     Serializer.hpp
+    VersionedSerializer.hpp
 )
