Remove old code from Files module. Remove Files example. Update usage

--- a/include/BLIB/Util/CMakeLists.txt
+++ b/include/BLIB/Util/CMakeLists.txt
@@ -1,11 +1,13 @@
 target_sources(BLIB PUBLIC
     AngularVector.hpp
+    FileUtil.hpp
     Hashes.hpp
     HashCombine.hpp
     LastVariadic.hpp
     NonCopyable.hpp
     Random.hpp
     Signal.hpp
+    TemplateLogic.hpp
     Timer.hpp
     TupleLoop.hpp
     Waiter.hpp
