Implement serializer for json

--- a/include/BLIB/Serialization/JSON/CMakeLists.txt
+++ b/include/BLIB/Serialization/JSON/CMakeLists.txt
@@ -2,4 +2,6 @@ target_sources(BLIB PUBLIC
     JSON.hpp
     Schema.hpp
     Serializer.hpp
+    SerializableField.hpp
+    SerializableObject.hpp
 )
