Refactor Menu module to reduce boilerplate, improve performance and fix memory leaks

--- a/include/BLIB/Interfaces/Menu/CMakeLists.txt
+++ b/include/BLIB/Interfaces/Menu/CMakeLists.txt
@@ -2,12 +2,9 @@ target_sources(BLIB PUBLIC
     Event.hpp
     Item.hpp
     Menu.hpp
-    Renderer.hpp
-    RenderItem.hpp
     Selector.hpp
 )
 
 add_subdirectory(EventGenerators)
-add_subdirectory(Renderers)
-add_subdirectory(RenderItems)
+add_subdirectory(Items)
 add_subdirectory(Selectors)
