WIP (tests failing): Refactor script value into multiple classes

--- a/include/BLIB/Scripts/CMakeLists.txt
+++ b/include/BLIB/Scripts/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(BLIB PUBLIC
     Function.hpp
     Script.hpp
     Manager.hpp
+    PrimitiveValue.hpp
     SymbolTable.hpp
     Value.hpp
+    ReferenceValue.hpp
 )
