--- a/src/Scripts/CMakeLists.txt
+++ b/src/Scripts/CMakeLists.txt
@@ -4,12 +4,14 @@ target_sources(BLIB PRIVATE
     Function.cpp
     Parser.hpp
     Parser.cpp
+    PrimitiveValue.cpp
     Script.cpp
     ScriptImpl.hpp
     ScriptImpl.cpp
     ScriptLibrary.hpp
     ScriptLibrary.cpp
     Manager.cpp
+    ReferenceValue.cpp
     SymbolTable.cpp
     Value.cpp
 )
