--- a/tests/Scripts/CMakeLists.txt
+++ b/tests/Scripts/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources(BLIB.t PUBLIC
     Error.t.cpp
     Parser.t.cpp
+    PrimitiveValue.t.cpp
     Script.t.cpp
     ScriptImpl.t.cpp
     ScriptLibrary.t.cpp
     SymbolTable.t.cpp
-    Value.t.cpp
 )
