Refactor resource managers to use a single background thread

--- a/include/BLIB/Resources/CMakeLists.txt
+++ b/include/BLIB/Resources/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     AsyncLoader.hpp
     BackgroundLoader.hpp
+    GarbageCollector.hpp
     Loader.hpp
     Manager.hpp
     Resource.hpp
