Statically link std lib in tests. Fix occasional test error with resource manager

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,16 @@ else()
     target_compile_options(BLIB.t PUBLIC -Wall -Wextra -pedantic)
 endif()
 
+set(BUILD_SHARED_LIBS Off)
+set(SFML_USE_STATIC_STD_LIBS On)
+target_compile_definitions(BLIB.t PUBLIC SFML_STATIC)
+set_target_properties(sfml-audio PROPERTIES CXX_STANDARD 98 CXX_STANDARD_REQUIRED YES CXX_EXTENSIONS NO)
+if (WIN32)
+    SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+    set(BUILD_SHARED_LIBRARIES OFF)
+    set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
+endif()
+
 target_link_libraries(BLIB.t PRIVATE
     BLIB
 
