--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -16,11 +16,10 @@ jobs:
         submodules: 'true'
       
     - name: configure
-      run: cmake -G "Unix Makefiles" -S . -B ./build
+      run: cmake -DON_CI=On -G "Unix Makefiles" -S . -B ./build
       
     - name: make
       run: cd build && make
     
     - name: test
       run: build/tests/BLIB.t 
-
