--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: 'true'
       
     - name: configure
-      run: cmake -G "Unix Makefiles" -S . -B ./build
+      run: cmake -DON_CI=On -G "Unix Makefiles" -S . -B ./build
       
     - name: make
       run: cd build && make
