Refactor serialization so that binary and json share same interface for descriptors

--- a/include/BLIB/Serialization/CMakeLists.txt
+++ b/include/BLIB/Serialization/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(BLIB PUBLIC
     Binary.hpp
     Buffers.hpp
     JSON.hpp
+    SerializableField.hpp
+    SerializableObject.hpp
 )
 
 add_subdirectory(Binary)
