Implement EventWaiter utility

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     ClassGuard.hpp
     DelayedDispatcher.hpp
+    EventWaiter.hpp
     SingleDispatcher.hpp
     SingleDispatcherScopeGuard.hpp
     SingleListener.hpp
