--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(Logging)
 add_subdirectory(Math)
 add_subdirectory(Media)
 add_subdirectory(Parser)
+add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
