WIP: Add vector math to math module. Further refine Input interface. Start Input implementation

--- a/include/BLIB/Input/CMakeLists.txt
+++ b/include/BLIB/Input/CMakeLists.txt
@@ -2,9 +2,9 @@ target_sources(BLIB PUBLIC
     Actor.hpp
     Control.hpp
     DirectionalControl.hpp
-    DispatchPolicy.hpp
+    DispatchType.hpp
     InputSystem.hpp
-    JoyStick.hpp
+    Joystick.hpp
     Listener.hpp
     MovementControl.hpp
     Trigger.hpp
