--- a/src/Input/CMakeLists.txt
+++ b/src/Input/CMakeLists.txt
@@ -1,13 +1,12 @@
 target_sources(BLIB PRIVATE
     Actor.cpp
+    Consts.hpp
     Control.cpp
-    DispatchType.cpp
-    Encoding.cpp
-    Encoding.hpp
+    Encoder.cpp
+    Encoder.hpp
     InputSystem.cpp
     Joystick.cpp
     Listener.cpp
     MovementControl.cpp
     Trigger.cpp
-    TriggerControl.cpp
 )
