Remove unused event classes

--- a/tests/Events/CMakeLists.txt
+++ b/tests/Events/CMakeLists.txt
@@ -1,7 +1,4 @@
 target_sources(BLIB.t PUBLIC
-    ClassGuard.t.cpp
-    DelayedDispatcher.t.cpp
-    SingleDispatcher.t.cpp
     Dispatcher.t.cpp
-    DispatcherScopeGuard.t.cpp
+    ListenerGuard.t.cpp
 )
