--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -1,11 +1,6 @@
 target_sources(BLIB PUBLIC
-    ClassGuard.hpp
-    DelayedDispatcher.hpp
     EventWaiter.hpp
-    SingleDispatcher.hpp
-    SingleDispatcherScopeGuard.hpp
-    SingleListener.hpp
     Dispatcher.hpp
-    DispatcherScopeGuard.hpp
     Listener.hpp
+    ListenerGuard.hpp
 )
