--- a/tests/Containers/CMakeLists.txt
+++ b/tests/Containers/CMakeLists.txt
@@ -7,4 +7,6 @@ target_sources(BLIB.t PUBLIC
     DynamicObjectPool.t.cpp
     QuadTree.t.cpp
     Grid.t.cpp
+    ObjectWrapper.t.cpp
+    RingQueue.t.cpp
 )
