Refactor event dispatcher to use singletons instead of runtime type lookups. Optimize locking. Update all calling code

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -3,4 +3,6 @@ target_sources(BLIB PUBLIC
     Dispatcher.hpp
     Listener.hpp
     ListenerGuard.hpp
+    SingleDispatcher.hpp
+    SubscribeHelpers.hpp
 )
