Make listeners self-unsubscribe on destruction

--- a/include/BLIB/Events/CMakeLists.txt
+++ b/include/BLIB/Events/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
     EventWaiter.hpp
     Dispatcher.hpp
     Listener.hpp
+    ListenerImpl.hpp
     ListenerGuard.hpp
     SingleDispatcher.hpp
     SubscribeHelpers.hpp
