Remove unused resource utilities. Refactor resources to allow for bundles. Update usages of resource classes

--- a/include/BLIB/Resources/CMakeLists.txt
+++ b/include/BLIB/Resources/CMakeLists.txt
@@ -1,8 +1,7 @@
 target_sources(BLIB PUBLIC
-    AsyncLoader.hpp
-    BackgroundLoader.hpp
+    FileSystem.hpp
     GarbageCollector.hpp
     Loader.hpp
-    Manager.hpp
     Resource.hpp
+    ResourceManager.hpp
 )
