UNTESTED: Implement direct read/write of json from streams for serialization module

--- a/include/BLIB/Util/CMakeLists.txt
+++ b/include/BLIB/Util/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(BLIB PUBLIC
     Random.hpp
     ReadWriteLock.hpp
     Signal.hpp
+    StreamUtil.hpp
     TemplateLogic.hpp
     Timer.hpp
     TupleLoop.hpp
