Start implementing resource bundler classes

--- a/include/BLIB/Resources/CMakeLists.txt
+++ b/include/BLIB/Resources/CMakeLists.txt
@@ -1,7 +1,10 @@
 target_sources(BLIB PUBLIC
+    Bundler.hpp
     FileSystem.hpp
     GarbageCollector.hpp
     Loader.hpp
     Resource.hpp
     ResourceManager.hpp
 )
+
+add_subdirectory(Bundling)
