Untested. Implement bundle creation code

--- a/include/BLIB/Resources/Bundling/CMakeLists.txt
+++ b/include/BLIB/Resources/Bundling/CMakeLists.txt
@@ -1,4 +1,11 @@
 target_sources(BLIB PUBLIC
+    BundledFileMetadata.hpp
+    BundleMetadata.hpp
     Config.hpp
     BundleSource.hpp
+    FileHandler.hpp
+    FileHandlerContext.hpp
+    Manifest.hpp
 )
+
+add_subdirectory(FileHandlers)
