--- a/src/Resources/CMakeLists.txt
+++ b/src/Resources/CMakeLists.txt
@@ -1,5 +1,8 @@
 target_sources(BLIB PRIVATE
+    Bundler.cpp
     FileSystem.cpp
     GarbageCollector.cpp
     ResourceManager.cpp
 )
+
+add_subdirectory(Bundling)
