Implement file handlers. Fix random float creation. Build resource bundling example

--- a/examples/Resources/CMakeLists.txt
+++ b/examples/Resources/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_executable(resources main.cpp)
+add_executable(resources
+    main.cpp
+    Character.cpp
+    Map.cpp
+)
 
 target_link_libraries(resources
     BLIB
