Untested. Implement bundle runtime

--- a/include/BLIB/Resources/Bundling/CMakeLists.txt
+++ b/include/BLIB/Resources/Bundling/CMakeLists.txt
@@ -1,8 +1,10 @@
 target_sources(BLIB PUBLIC
+    Bundle.hpp
     BundledFileMetadata.hpp
     BundleMetadata.hpp
-    Config.hpp
+    BundleRuntime.hpp
     BundleSource.hpp
+    Config.hpp
     FileHandler.hpp
     FileHandlerContext.hpp
     Manifest.hpp
