--- a/src/Resources/Bundling/CMakeLists.txt
+++ b/src/Resources/Bundling/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(BLIB PRIVATE
+    Bundle.cpp
     BundleMetadata.cpp
+    BundleRuntime.cpp
     Config.cpp
     FileHandlerContext.cpp
     Manifest.cpp
